[project]
name = "dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "flask>=3.1.1",
    "huggingface-hub>=0.33.1",
    "keras>=3.10.0",
    "keras-nlp>=0.19.0",
    "peft>=0.15.2",
    "torch>=2.7.1",
    "transformers>=4.53.0",
]
